# ai-text-analysis

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
app/: main.py
app/models/: __init__.py  api_models.py  db.py  db_models.py  models.py
app/routers/: review.py  test.py
app/services/: converters.py  database.py  gemini.py  llm-api.py  llm_api.py  security.py  text_analysis.py  text_sanitizer.py
testdata/: faulty_article.txt
