[project]
name = "ai-text-analysis"
version = "0.1.0"
description = "A FastAPI-based text analysis service that identifies spelling, grammar, and style errors in submitted text using Google's Gemini AI model."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "pydantic-ai>=0.2.11",
    "sqlmodel>=0.0.24",
]
